// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paper组件 快照测试 基本使用 1`] = `
<div
  className="sc-AxjAm sc-AxirZ ePgFSH sinoui-paper"
>
  Paper Content
</div>
`;

exports[`Paper组件 快照测试 设置是否显示方角 1`] = `
<div
  className="sc-AxjAm sc-AxirZ kymeon sinoui-paper"
>
  Paper Content
</div>
`;

exports[`Paper组件 快照测试 设置轮廓模式 1`] = `
<div
  className="sc-AxjAm sc-AxirZ foWngL sinoui-paper"
>
  Paper Content
</div>
`;

exports[`Paper组件 快照测试 设置阴影高度 1`] = `
<div
  className="sc-AxjAm sc-AxirZ eSXXON sinoui-paper"
  elevation={4}
>
  Paper Content
</div>
`;
